exports[`graphql-rxjs import tests also works with vanilla graphql objects 1`] = `
Array [
  Object {
    "data": Object {
      "counter": 2,
    },
  },
  Object {
    "data": Object {
      "counter": 0,
    },
  },
  Object {
    "data": Object {
      "counter": 1,
    },
  },
]
`;

exports[`graphql-rxjs import tests can also query static values 1`] = `
Array [
  Object {
    "data": Object {
      "someInt": 123321,
    },
  },
]
`;

exports[`graphql-rxjs import tests can work with graphql-tools 1`] = `
Array [
  Object {
    "data": Object {
      "counter": 0,
    },
  },
  Object {
    "data": Object {
      "counter": 1,
    },
  },
  Object {
    "data": Object {
      "counter": 2,
    },
  },
]
`;
